--- a/FicherosTFG/00introduccion.tex
+++ b/FicherosTFG/00introduccion.tex
@@ -17,7 +17,10 @@ En el capítulo siguiente, \ref{cha:Comenzamos}, introduciremos la ecuación de on
 Una vez tenemos todos los cimientos construidos, en el capítulo \ref{cha:Comparativa}, haremos uso de uno de los métodos más utilizados para la resolución numérica, el método de las diferencias finitas. Continuando el capítulo, analizaremos la consistencia y estabilidad de las soluciones obtenidas. Acabaremos trasladando tanto las soluciones de tipo onda viajera como la conservación de la energía al ámbito discreto.\\
 
 
-Concluiremos el grueso del trabajo llevando todos los avances hechos  teóricamente a la practica. Esto lo realizaremos mediante el script de Python, este se puede encontrar en el Anexo \ref{cha:Anexo} y en el Github del trabajo, \
+Concluiremos el grueso del trabajo llevando todos los avances hechos  teóricamente a la practica. Esto lo realizaremos mediante el script de Python, este se puede encontrar en el Anexo \ref{cha:Anexo} y en el Github del trabajo, . En el capítulo \ref{cha:Comparativa}, comparamos las soluciones obtenidas, en varios sentidos, desde cambiando las condiciones iniciales del sistema, hasta varios de las condiciones obtenidas en los capítulos anteriores.\\
+
+
+Como cierre, en el apartado de conclusiones \ref{Conclusiones}, sintetizaremos los hallazgos obtenidos y presentaremos sugerencias para seguir explorando en esta área de estudio.
 
 
 
