--- a/FicherosTFG/agradecimientos.tex
+++ b/FicherosTFG/agradecimientos.tex
@@ -1,10 +1,22 @@
 
 \begin{acknowledgements}
 
+Cuando comencé el grado en matemáticas con todos mis compañeros, creo que ninguno sabíamos como era esta carrera. A lo largo de los años me enorgullezco en decir que hemos construido amistades duraderas, pasado juntos momentos complicados y aprendido mucho más de lo que podíamos imaginar.\\
 
-Por mi excelencia y formación profesional, gracias a su cariño, guía y apoyo. Este presente simboliza mi gratitud por toda la responsabilidad e inestimable ayuda que siempre me han proporcionado.
+Por todo esto quiero agradecerles a ellos y sobre todo a mi compañera y amiga Marina por estar a mi lado en cada paso del camino, porque gracias a eso hemos conseguido avanzar juntas. \\
 
-Con amor, admiración y respeto.
+Creo que todos tenemos que agradecer a nuestros profesores de la carrera, por intentar que aprendamos y seamos críticos. Sobre todo a mis directores de este trabajo por su paciencia infinita y su ayuda en todo momento.\\
+
+
+También debo agradecer a mis padres, por creer siempre en mi y escucharme cada día, aún cuando ellos no comprendían lo que les contaba. Gracias, por construirme cómo persona y hacerme llegar a donde estoy.\\
+
+Por último quiero agradecer a mi novio, porque estos últimos años, tan duros a la par que gratificantes, ha sabido llenarme de confianza.\\
+
+Gracias a todos y espero poder devolveros algún día todo lo que me habéis dado.
+
+ 
+ 
+
 \begin{flushright}
 
 Ana Cuevas de Cózar
