--- a/FicherosTFG/resumen.tex
+++ b/FicherosTFG/resumen.tex
@@ -3,7 +3,18 @@
 
 % Pon tu resumen aquí en español.
 
-Se ha hecho una investigación sobre la resolución de las ecuaciones de onda. 
+En este trabajo trataremos el estudio de la ecuación de onda en derivadas parciales, desde una perspectiva numérica, explorando diferentes enfoques. \\
+
+Comenzaremos estableciendo una base física para comprender el origen de la ecuación de onda y como se deriva.\\
+
+A continuación, abordaremos aspectos como la ley de la conservación de la energía o las soluciones de tipo onda viajera.\\
+
+Luego, empleando el método de las diferencias finitas obtendremos una solución numérica de la ecuación de onda, haciendo una discretización en espacio y tiempo para aproximarla. También retomaremos los aspectos anteriormente nombrados desde este punto de vista.\\
+
+Seguiremos haciendo una comparativa, gráfica y sonora de las aproximaciones obtenidas, cambiando los parámetros y condiciones obtenidas en los capítulos anteriores para comprobar su efecto en la misma.\\
+
+Por último, presentaremos las conclusiones obtenidas a lo largo de este trabajo, resumiendo las observaciones y los resultados relevantes.
+
 
 \end{resumen}
 
