--- a/FicherosTFG/06conclusiones2.tex
+++ b/FicherosTFG/06conclusiones2.tex
@@ -15,41 +15,138 @@ Comenzamos implementando el esquema \eqref{esquemacompletoonda} y así resolviend
  	
  	#Funciones necesarias
  	
- 	# Para inicializar los valores iniciales que dependen de la 
- 	#derivada lo haremos con una aproximación progresiva del tiempo
+ 	# Para inicializar los valores iniciales que dependen de la
+ 	 derivada lo haremos con una aproximación progresiva del 
+ 	 tiempo definimos la funcion g del esquema.
+ 	
  	def g(x):
  	return 0
  	
  	
+ 	'''
+ 	# En este caso tomamos una condición tipo struck en 0.4,
+ 	 0.5 max
+ 	def g(x):
+ 	if( x<=0.4):
+ 	return 2.5*x
+ 	else:
+ 	return -(10/6)*x
+ 	'''
+ 	
+ 	'''
+ 	# En este caso tomamos una condición tipo struck en 0.1, 
+ 	1 max
+ 	
+ 	def g(x):
+ 	if( x<=0.1):
+ 	return 50000*x
+ 	if (x <= 0.2):
+ 	return 50000*(0.2-x)
+ 	else:
+ 	return 0
+ 	'''
+ 	
+ 	'''
+ 	# En este caso tomamos una condición tipo crc c0=1000, 
+ 	x0 = 0.5
+ 	
+ 	def g(x):
+ 	if (0.4<=x <= 0.6):
+ 	return 1000/2 * (1+np.cos(np.pi*(x-0.4)/0.1))
+ 	else:
+ 	return 0
+ 	'''
+ 	
+ 	
  	# Condición de contorno en el eje de posición tipo seno
+ 	
  	def f(x):
- 	return np.sin(np.pi * x)  # Tener cuidado con la función
- 	 por si se sale del rango
+ 	aux = []
+ 	for i in x:
+ 	aux.append(np.sin(2*np.pi*i))
+ 	return aux # Tener cuidado con la función por si se sale
+ 				 del rango
  	
  	
+ 	'''
+ 	#Condición de contorno en el eje de posición tipo pico
+ 	def f(x):
+ 	aux = []
+ 	for i in x:
+ 	if( i<=0.25):
+ 	aux.append(0)
+ 	elif ( i<=0.5):
+ 	aux.append(4*(i-0.25))
+ 	elif ( i<=0.75):
+ 	aux.append(4*(0.75-i))
+ 	else:
+ 	aux.append(0)
+ 	return aux
+ 	'''
  	
- 	# Definimos una función para usar en el método explícito y
- 	# poder cambiarlo de manera rápida si hace falta
- 	# Si queremos hacerlo en un file independiente tendremos 
- 	# que añadir el mu
- 	def Explicito(x1, x2, x3, x4,mu): 
+ 	'''
+ 	#Condición de contorno en el eje de posición tipo trapecio
+ 	def f(x):
+ 	aux = []
+ 	for i in x:
+ 	if( i<=0.1):
+ 	aux.append(0)
+ 	elif ( i<=0.3):
+ 	aux.append(5*i-0.5)
+ 	elif ( i<=0.7):
+ 	aux.append(1)
+ 	elif ( i<=0.9):
+ 	aux.append(-5*i+4.5)
+ 	else:
+ 	aux.append(0)
+ 	return aux
+ 	'''
+ 	
+ 	'''
+ 	#condicioón de tipo c_rc con x_hw= 0.2 x_0 = 0.5 c_0= 1
+ 	def f(x):
+ 	aux = []
+ 	for i in x:
+ 	if( i<=0.3):
+ 	aux.append(0)
+ 	elif ( i<=0.7):
+ 	aux.append((1+np.cos(np.pi * (i-0.5)/0.2))/2)
+ 	
+ 	else:
+ 	aux.append(0)
+ 	return aux
+ 	'''
+ 	
+ 	'''
+ 	# Condición de contorno en el eje de posición tipo plano
+ 	def f(x):
+ 	lon = len(x)
+ 	return np.zeros(lon)
+ 	'''
+ 	
+ 	# Definimos una función para usar en el método explícito y 
+ 	poder cambiarlo de manera rápida si hace falta
+ 	def Explicito(x1, x2, x3, x4,mu):  # Si queremos hacerlo 
+ 										en un file independiente 
+ 										tendremos que añadir el mu
  	return  mu ** 2 * (x1 + x2) + 2 * (1- mu ** 2) * x3 - x4
  	
  	
  	start = time.time()
- 	print("Vamos a hacer una resolución numérica de la 
- 	ecuación de onda u_tt-c^2u_xx=0")
+ 	print("Vamos a hacer una resolución numérica de la ecuación de
+ 	 onda u_tt-c^2u_xx=0")
  	print("Introduce c:")
  	c= float(input())
- 	print("Introduce el nombre del directorio donde quieres 
- 	guardar los archivos:")
+ 	print("Introduce el nombre del directorio donde quieres guardar 
+ 	los archivos:")
  	directorio=input()
  	
  	
  	#Creamos una carpeta en la que se guardarán los datos
- 	home = 'C:\\Users\\Ana Cuevas de Cózar\\PycharmProjects
- 	\\pythonProject2'
+ 	home = 'C:\\Users\\Ana Cuevas de Cózar\\PycharmProjects\\
+ 	pythonProject2'
  	directoriofinal=home+'\\'+directorio+'\\'
+ 	
  	#Si existe el directorio lo borra
  	try:
  	rmtree(directoriofinal)
@@ -61,58 +158,100 @@ Comenzamos implementando el esquema \eqref{esquemacompletoonda} y así resolviend
  	#Constantes necesarias
  	l=1
  	tmax= 1
- 	m = int(l*3)# Constante representativa del número de trozos
- 	# en los que separamos el espacio
+ 	m = int(l*300) #Constante representativa del número de trozos
+ 					en los que separamos el espacio
  	h=l/m  #Cambiamos la h para que sea entera
  	
- 	k =h/c #Lo tomamos de esta forma para ganar en exactitud 
- 	#pagina 133 numerical sound synthesis
- 	#k =h/c * 0.01
- 	#k =h/c * 0.1
- 	#k =h/c * 0.5
- 	#k =h/c * 0.9
- 	n= int(tmax/k)
+ 	k =h/c #Lo tomamos de esta forma para ganar en exactitud pagina
+ 			 133 numerical sound synthesis
  	
- 	#Comprobación de que es entero!
+ 	
+ 	#Cambiamos k para hacer las comparaciones
+ 	'''
+ 	k =h/c * 0.9
+ 	k =h/c * 0.5
+ 	k =h/c * 0.1
+ 	k =h/c * 0.01
+ 	k =1.001*h/c
+ 	k =1.005*h/c
+ 	'''
+ 	
+ 	n= int(tmax/k)
  	mu = c * k / h
  	
  	if mu>1 :
- 	raise Exception('Mu es mayor que 1')
+ 	    raise Exception('Mu es mayor que 1')
  	print(f'n{n}, c{c}, k{k}, h{h}, m{m}, mu{mu}')
- 	# Creamos un mallado de puntos en los que aproximaremos 
- 	#la solución
+ 	
+ 	# Creamos un mallado de puntos en los que aproximaremos la 
+ 	solución
  	x= np.linspace(0,l,num=m +1)
  	t= np.linspace(0,tmax,num=n +1)
  	
  	
  	
- 	# Creamos la matriz u de soluciones
- 	# u(x,t)
+ 	# Creamos la matriz u de soluciones u(x,t)
  	u = np.empty((m + 1, n + 1), float)
  	
  	
  	# Añadimos antes que nada los nodos conocidos por las 
- 	# condiciones de contorno
- 	
+ 	condiciones de contorno
  	u[:, 0] = f(x)
  	
  	u[0, :] = np.zeros(n + 1)
  	
  	u[m, :] = np.zeros(n + 1)
  	aux=[0]
- 	# Para inicializar los valores iniciales que dependen de la 
- 	derivada lo haremos con una aproximación progresiva del tiempo
+ 	
+ 	
+ 	# Para inicializar los valores iniciales que dependen 
+ 	de la derivada lo haremos con una aproximación progresiva
+ 	del tiempo
+ 	
  	for i in range(1, m):
- 	u[i, 1] = u[i, 0] + k * g(x[i])
- 	aux.append(g(x[i]))
+ 		u[i, 1] = u[i, 0] + k * g(x[i])
+ 		aux.append(g(x[i]))
  	
  	aux.append(g(x[m]))
  	
- 	print(u[:,1])
  	
  	for j in range(2, n + 1):
- 	u[1:m, j] = Explicito(u[2:m+1,j-1], u[0:m-1,j-1], u[1:m,j-1],
- 	u[1:m,j-2],mu)
+ 		u[1:m, j] = Explicito(u[2:m+1,j-1], u[0:m-1,j-1], 
+ 		u[1:m,j-1], u[1:m,j-2],mu)
+ 	
+ 	
+ 	#Implementamos la solución de tipo onda viajera.
+ 	Solo para mu=1
+ 	
+ 	# Creamos la matriz wl la solución viajera hacia la 
+ 	izquierda y wr hacia la derecha
+ 	
+ 	wl = np.empty((m + 1, n + 1), float) #Solo para mu=1
+ 	wr = np.empty((m + 1, n + 1), float) #Solo para mu=1
+ 	
+ 	#Inicializamos la solución
+ 	for i in range(0, m+1):
+ 		if i==0:
+ 			sumx =2* g(x[0])
+ 		elif i==1:
+ 			sumx = g(x[0])+g(x[1])
+ 		else:
+ 			sumx += g(x[i-1])+g(x[i])
+ 		wl[i, 0] = 1 / 2 * f([x[i]])[0] + h / (4 * c) * (sumx)
+ 		 + k / 4 * 2*g(x[i]+c*t[0]) #Prueba apendice libro Bilbao
+ 		 
+ 	wr[0:m+1,0]=wl[0:m+1,0]
+ 	
+ 	
+ 	for j in range(1, n + 1):
+ 		temp1 = wr[m,j-1]
+ 		temp2 = wl[0,j-1]
+ 		wr[1:m+1,j] = wr[0:m,j-1]
+ 		wl[0:m ,j] = wl[1:m+1,j-1]
+ 		wr[0,j] = -temp2
+ 		wl[m,j] = -temp1
+ 	
+ 	#Termina la parte de la solución de tipo onda viajera
  	
  	end = time.time()
  	
@@ -128,9 +267,16 @@ Comenzamos implementando el esquema \eqref{esquemacompletoonda} y así resolviend
  	np.save(directoriofinal+'u', u)
  	np.save(directoriofinal+'x', x)
  	np.save(directoriofinal+'t', t)
- 	np.save(directoriofinal+'constantes', [c, m,h,n,k,mu,tmax] ) 
- 	# Guardar en cons las constantes que necesitemos para usarlas 
- 	luego en el guardado
+ 	
+ 	
+ 	np.save(directoriofinal+'wl', wl) #Solo para mu=1
+ 	np.save(directoriofinal + 'wr', wr) #Solo para mu=1
+ 	
+ 	
+ 	np.save(directoriofinal+'constantes', [c, m,h,n,k,mu,tmax,l] ) 
+ 	#Guardar en cons las constantes que necesitemos para usarlas luego
+ 	en el guardado del sonido
+ 	
  \end{verbatim}
  Al final guardamos los datos obtenidos para su posterior procesado.
  
@@ -152,7 +298,6 @@ Creo ahora un archivo de audio a partir de los datos anteriores y lo guardo en u
 	
 	
 	#Añadimos los datos
-	#Añadimos los datos
 	datos = np.load(directorio+'u.npy', mmap_mode='r')
 	t = np.load(directorio+'t.npy', mmap_mode='r')
 	x = np.load(directorio+'x.npy', mmap_mode='r')
@@ -169,19 +314,20 @@ Creo ahora un archivo de audio a partir de los datos anteriores y lo guardo en u
 	
 	
 	# Escogiendo un punto en particular
-	# Comprobamos donde está el punto de mayor amplitud en el
-	# instante inicial y en ese punto es donde veremos como 
-	# se mueve la onda.
+	Comprobamos donde está el punto de mayor amplitud en el
+	instante inicial y en ese punto es donde veremos como 
+	se mueve la onda.
 	pos_readout= np.where(datos[:,0]==max(datos[:,0]))[0][0]
 	
 	if pos_readout==0:
-	pos_readout= 50
-	print('Cambio la posicion a 0.5')
+		pos_readout= 50
+		print('Cambio la posicion a 0.5')
 	
 	wave_table = datos[pos_readout] # Elijo un punto en el 
-	#espacio en el que veremos el movimiento de la cuerda
+	espacio en el que veremos el movimiento de la cuerda
+	
 	wave_table2 = datos[pos_readout+1] # Elijo un punto en el
-	# espacio en el que veremos el movimiento de la cuerda
+	espacio en el que veremos el movimiento de la cuerda
 	output = np.interp(t_necesario,  t, wave_table)
 	
 	
@@ -228,6 +374,7 @@ Creamos y guardamos las imágenes de la posición de la cuerda en varios instantes
 	pythonProject2\\'+dir+'\\'
 	cuerda=directorio + 'Imagenes Cuerda\\'
 	onda= directorio+ 'Imagenes Onda\\'
+	
 	try:
 	rmtree(cuerda)
 	rmtree(onda)
@@ -240,6 +387,12 @@ Creamos y guardamos las imágenes de la posición de la cuerda en varios instantes
 	
 	#Añadimos los datos
 	datos = np.load(directorio+'u.npy', mmap_mode='r')
+	
+	#Solo para ondas viajeras, para mu=1
+	datoswl = np.load(directorio+'wl.npy', mmap_mode='r') #Solo para mu=1
+	datoswr = np.load(directorio+'wr.npy', mmap_mode='r') #Solo para mu=1
+	
+	
 	t = np.load(directorio+'t.npy', mmap_mode='r')
 	x = np.load(directorio+'x.npy', mmap_mode='r')
 	[f, m,h,n,k,mu,tmax]= np.load(directorio+'constantes.npy', 
@@ -249,8 +402,12 @@ Creamos y guardamos las imágenes de la posición de la cuerda en varios instantes
 	m=int(m)
 	
 	#Vamos a pintar las imagenes de a posición de la cuerda en
-	# instantes selecionados
+	 instantes selecionados
 	plt.plot(x, datos[:, 0], 'k')
+	
+	plt.plot(x, datoswl[:, 0], 'r') #Solo para mu=1
+	plt.plot(x, datoswr[:, 0], 'b') #Solo para mu=1
+	
 	plt.ylim(-1,1)
 	plt.xlabel('x')
 	plt.ylabel('u')
@@ -259,30 +416,45 @@ Creamos y guardamos las imágenes de la posición de la cuerda en varios instantes
 	plt.savefig(cuerda+f'Cuerda_instante_{0}.png')
 	plt.close()
 	
-	for j in range(1, n + 1):
-	#if j % int(10*n/f)==0:
-	if j==j:
-	plt.plot(x, datos[:, j], 'k')
-	plt.ylim(-1,1)
-	plt.xlabel('x')
-	plt.ylabel('u')
-	plt.title(f'Cuerda en el instante {t[j]},\nmin={min(datos[:,j])},
-	 max={max(datos[:,j])}')
-	plt.savefig(cuerda+f'Cuerda_instante_{j}.png')
-	plt.close()
+	
+	#Elegimos cuantas imagenes pintar, al menos un ciclo completo.
+	if (int(2*n/f)+2)/100 > 1:
+	aux=int((int(2*n/f)+2)/100)
+	else:
+	aux=1
+	
+	
+	for j in range(1, 2*int(2*n/f)+2):
+		if j %aux ==0 :
+		plt.plot(x, datos[:, j], 'k')
+		plt.ylim(-1,1)
+		plt.xlabel('x')
+		plt.ylabel('u')
+		plt.title(f'Cuerda en el instante {t[j]},\nmin={min(datos[:,j])},
+		max={max(datos[:,j])}')
+		
+		plt.savefig(cuerda+f'Cuerda_instante_{j}.png')
+		plt.close()
 	
 	
 	#Pintamos la imagen de la onda en los 1000 primeros instantes
-	# en cada punto
+	en cada punto
 	for j in range(0, m + 1):
-	plt.plot(t[0:1000], datos[j,0:1000],'r')
-	plt.plot(t[0:1000], datos[j,n-999:n+1],'b')
-	plt.xlabel('t')
-	plt.ylabel('u')
-	#axis tight
-	plt.title(f'Movimiento del punto {x[j]} en el espacio')  
-	plt.savefig(onda+f'Punto_{j}.png')
-	plt.close()
+		plt.plot(t[0:10*int(2*n/f)+2], datos[j,0:10*int(2*n/f)+2],'r')
+		plt.ylim(-1.1, 1.1)
+		plt.xlabel('t')
+		plt.ylabel('u')
+		plt.title(f'Movimiento del punto {x[j]} en el espacio')  #axis tight
+		plt.savefig(onda+f'PrimerosmilPunto_{j}.png')
+		plt.close()
+		
+		plt.plot(t[0:10*int(2*n/f)+2], datos[j, n - (10*int(2*n/f)+2):n], 'b')
+		plt.ylim(-1.1, 1.1)
+		plt.xlabel('t')
+		plt.ylabel('u')
+		plt.title(f'Movimiento del punto {x[j]} en el espacio')  # axis tight
+		plt.savefig(onda + f'UltimosmilPunto_{j}.png')
+		plt.close()
 \end{verbatim}
 
 % ----------------------------------------------------------------------
